# simplified-KCF-Tracker

./: CMakeLists.txt  README.md  basetype.cpp  basetype.h  complex.hpp  dxt.cpp  dxt.h  ffttools.hpp  fhog.cpp  fhog.hpp  kcftracker.cpp  kcftracker.hpp  recttools.hpp  trackerinterface.cpp  trackerinterface.h
test/: runtracker.cpp
